# haskell-splitmix

./: cabal.haskell-ci  cabal.project  splitmix.cabal
.github/workflows/: bsd.yml  haskell-ci.yml
splitmix-tests/: splitmix-tests.cabal
splitmix-tests/bench/: Range.hs
splitmix-tests/tests/: TestU01.hs
src/System/Random/: SplitMix.hs  SplitMix32.hs
