cabal-version:      2.4
name:               splitmix
version:            0.1.3.1
synopsis:           Fast Splittable PRNG
description:
  Pure Haskell implementation of SplitMix described in
  .
  Guy L. Steele, Jr., Doug Lea, and Christine H. Flood. 2014.
  Fast splittable pseudorandom number generators. In Proceedings
  of the 2014 ACM International Conference on Object Oriented
  Programming Systems Languages & Applications (OOPSLA '14). ACM,
  New York, NY, USA, 453-472. DOI:
  <https://doi.org/10.1145/2660193.2660195>
  .
  The paper describes a new algorithm /SplitMix/ for /splittable/
  pseudorandom number generator that is quite fast: 9 64 bit arithmetic/logical
  operations per 64 bits generated.
  .
  /SplitMix/ is tested with two standard statistical test suites (DieHarder and
  TestU01, this implementation only using the former) and it appears to be
  adequate for "everyday" use, such as Monte Carlo algorithms and randomized
  data structures where speed is important.
  .
  In particular, it __should not be used for cryptographic or security applications__,
  because generated sequences of pseudorandom values are too predictable
  (the mixing functions are easily inverted, and two successive outputs
  suffice to reconstruct the internal state).

license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
bug-reports:        https://github.com/haskellari/splitmix/issues
category:           System, Random
build-type:         Simple
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.4
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2
   || ==9.14.1

extra-doc-files:
  Changelog.md
  README.md

extra-source-files:
  make-hugs.sh
  test-hugs.sh

flag optimised-mixer
  description: Use JavaScript for mix32
  manual:      True
  default:     False

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  exposed-modules:
    System.Random.SplitMix
    System.Random.SplitMix32

  other-modules:
    System.Random.SplitMix.Init

  -- dump-core
  -- build-depends: dump-core
  -- ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core-html

  build-depends:
    , base     >=4.12.0.0 && <4.23
    , deepseq  >=1.4.4.0  && <1.6

  if flag(optimised-mixer)
    cpp-options: -DOPTIMISED_MIX32=1

  -- We don't want to depend on time, nor unix or Win32 packages
  -- because it's valuable that splitmix and QuickCheck doesn't
  -- depend on about anything

  if impl(ghcjs)
    cpp-options: -DSPLITMIX_INIT_GHCJS=1

  else
    if impl(ghc)
      cpp-options: -DSPLITMIX_INIT_C=1

      if os(windows)
        c-sources: cbits-win/init.c

      elif (os(osx) || os(ios))
        c-sources:  cbits-apple/init.c
        frameworks: Security

      else
        c-sources: cbits-unix/init.c

    else
      cpp-options:   -DSPLITMIX_INIT_COMPAT=1
      build-depends: time >=1.2.0.3 && <1.15

source-repository head
  type:     git
  location: https://github.com/haskellari/splitmix.git

test-suite splitmix-examples
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   tests
  main-is:          splitmix-examples.hs
  build-depends:
    , base
    , HUnit     >=1.6.0.0 && <1.7
    , splitmix

test-suite splitmix-th-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -threaded -rtsopts
  hs-source-dirs:   tests
  main-is:          splitmix-th-test.hs
  build-depends:
    , base
    , template-haskell
    , splitmix
