cabal-version: 2.4
name:          splitmix-tests
version:       0
synopsis:      Fast Splittable PRNG
description:
  Pure Haskell implementation of SplitMix described in ...
  more tests

license:       BSD-3-Clause
license-file:  LICENSE
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
bug-reports:   https://github.com/haskellari/splitmix/issues
category:      System, Random
build-type:    Simple
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.4
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Dummy
  build-depends:    base <5

source-repository head
  type:     git
  location: https://github.com/haskellari/splitmix.git

benchmark comparison
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   bench
  main-is:          Bench.hs
  build-depends:
    , base        <5
    , containers  >=0.6.0.1 && <0.8
    , criterion   >=1.6.0.0 && <1.7
    , random
    , splitmix
    , tf-random   >=0.5     && <0.6

benchmark simple-sum
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   bench
  main-is:          SimpleSum.hs
  build-depends:
    , base      <5
    , random
    , splitmix

benchmark range
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   bench
  main-is:          Range.hs
  build-depends:
    , base      <5
    , clock     >=0.8.4 && <0.9
    , splitmix

test-suite splitmix-tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   tests
  main-is:          splitmix-tests.hs
  other-modules:
    MiniQC
    Uniformity

  build-depends:
    , base                  <5
    , containers            >=0.4.0.0 && <0.8
    , HUnit                 >=1.6.0.0 && <1.7
    , math-functions        >=0.3.3.0 && <0.4
    , splitmix
    , test-framework        >=0.8.2.0 && <0.9
    , test-framework-hunit  >=0.3.0.2 && <0.4

test-suite montecarlo-pi
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   tests
  main-is:          SplitMixPi.hs
  build-depends:
    , base      <5
    , splitmix

test-suite montecarlo-pi-32
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   tests
  main-is:          SplitMixPi32.hs
  build-depends:
    , base      <5
    , splitmix

test-suite splitmix-dieharder
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -threaded -rtsopts
  hs-source-dirs:   tests
  main-is:          Dieharder.hs
  build-depends:
    , async       >=2.2.1    && <2.3
    , base        <5
    , bytestring  >=0.10.8.2 && <0.13
    , deepseq
    , process     >=1.6.0.0  && <1.7
    , splitmix
    , tf-random   >=0.5      && <0.6
    , vector      >=0.13.2.0 && <0.14

test-suite splitmix-testu01
  if !os(linux)
    buildable: False

  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -threaded -rtsopts
  hs-source-dirs:   tests
  main-is:          TestU01.hs
  c-sources:        tests/cbits/testu01.c
  extra-libraries:  testu01
  build-depends:
    , base      <5
    , splitmix

test-suite initialization
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -threaded -rtsopts
  hs-source-dirs:   tests
  main-is:          Initialization.hs
  build-depends:
    , base      <5
    , HUnit     >=1.6.0.0 && <1.7
    , splitmix
